# onyx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  generate-shaders.sh  roadmap.md
demo/: CMakeLists.txt  hello_world.cpp  imgui.cpp  layout.cpp  lights.cpp  lights2.cpp  lights3.cpp  overlay.cpp  render_texture.cpp  text.cpp  transparency.cpp  ui.cpp
demo-utils/: CMakeLists.txt
demo-utils/shaders/: blur.frag
demo-utils/utils/: argparse.cpp  argparse.hpp  shapes.cpp  shapes.hpp  window_data.cpp  window_data.hpp
demo/hello-world/: CMakeLists.txt  main.cpp
demo/include/demo/: app.hpp  layer.hpp
demo/multi-window/: CMakeLists.txt
demo/multi-window/app/: layer.cpp  main.cpp
demo/performance/: CMakeLists.txt  profile.py
demo/performance/perf/: argparse.cpp  argparse.hpp  lattice.cpp  lattice.hpp  layer.cpp  layer.hpp  main.cpp
demo/sandbox/: CMakeLists.txt
demo/sandbox/sandbox/: argparse.cpp  argparse.hpp  main.cpp  sandbox.cpp  sandbox.hpp
demo/sandbox/sbox/: argparse.cpp  argparse.hpp  layer.cpp  layer.hpp  main.cpp  shapes.cpp  shapes.hpp  window_data.cpp  window_data.hpp
demo/shaders/: rainbow.frag
demo/single-window/: CMakeLists.txt
demo/single-window/app/: layer.cpp  main.cpp
demo/src/: app.cpp  layer.cpp  main.cpp
demo/utils/: argparse.cpp  window_data.cpp  window_data.hpp
hello-world/: CMakeLists.txt  main.cpp
multi-window-demo/: CMakeLists.txt
multi-window-demo/include/mwdemo/: app.hpp  layer.hpp
multi-window-demo/mwdemo/: app.cpp  app.hpp  layer.cpp  layer.hpp  main.cpp
multi-window-demo/src/: app.cpp  layer.cpp  main.cpp
onyx/: CMakeLists.txt
onyx/include/onyx/: alias.hpp  camera.hpp  color.hpp  context.hpp  core.hpp  definitions.hpp  dialog.hpp  font.hpp  gltf.hpp  handle.hpp  image.hpp  imgui_theme.hpp  input.hpp  instance.hpp  layout.hpp  material.hpp  math.hpp  mesh.hpp  onyx.hpp  overlay.hpp  pass.hpp  platform.hpp  render_target.hpp  render_texture.hpp  renderer.hpp  resources.hpp  sampler.hpp  specs.hpp  transform.hpp  ui.hpp  vertex.hpp  view.hpp  window.hpp
onyx/onyx/: onyx.cpp  onyx.hpp  spirv.hpp
onyx/onyx/app/: app.cpp  app.hpp  input.cpp  input.hpp  layer.cpp  layer.hpp  mwapp.cpp  mwapp.hpp  theme.cpp  theme.hpp  user_layer.cpp  user_layer.hpp  window.cpp  window.hpp
onyx/onyx/application/: application.cpp  application.hpp  input.cpp  layer.cpp  layer.hpp  window.cpp  window.hpp
onyx/onyx/asset/: assets.cpp  assets.hpp  font.cpp  font.hpp  gltf.cpp  gltf.hpp  handle.hpp  image.cpp  material.hpp  mesh.cpp  mesh.hpp  sampler.hpp  texture.cpp  texture.hpp
onyx/onyx/buffer/: buffer.cpp  buffer.hpp  device_buffer.hpp  index_buffer.cpp  index_buffer.hpp  storage_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
onyx/onyx/core/: alias.hpp  api.hpp  core.cpp  core.hpp  definitions.hpp  device.cpp  device.hpp  dialog.cpp  dialog.hpp  dimension.hpp  glm.hpp  imgui.hpp  instance.cpp  instance.hpp  limits.hpp  math.hpp  pch.cpp  pch.hpp  shaders.cpp  shaders.hpp  vma.hpp
onyx/onyx/data/: buffer.cpp  buffer.hpp  buffers.cpp  buffers.hpp  command.hpp  options.hpp  state.cpp  state.hpp  sync.cpp  sync.hpp
onyx/onyx/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp
onyx/onyx/draw/: color.cpp  color.hpp  data.cpp  data.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  primitives.cpp  primitives.hpp  transform.cpp  transform.hpp  vertex.cpp  vertex.hpp
onyx/onyx/execution/: command_pool.cpp  command_pool.hpp  execution.cpp  execution.hpp  queues.cpp  queues.hpp  sync.cpp
onyx/onyx/imgui/: backend.cpp  backend.hpp  imgui.cpp  imgui.hpp  imgui_impl_glfw.cpp  implot.hpp  theme.cpp  theme.hpp
onyx/onyx/object/: mesh.cpp  mesh.hpp  primitives.cpp  primitives.hpp
onyx/onyx/pipeline/: graphics_pipeline.cpp  graphics_pipeline.hpp  shader.cpp  shader.hpp
onyx/onyx/platform/: dialog.cpp  dialog.hpp  glfw.hpp  input.cpp  input.hpp  platform.cpp  platform.hpp  window.cpp  window.hpp
onyx/onyx/property/: camera.cpp  camera.hpp  color.cpp  color.hpp  instance.cpp  instance.hpp  parameters.hpp  property.cpp  transform.cpp  transform.hpp  vertex.cpp  vertex.hpp
onyx/onyx/rendering/: camera.cpp  camera.hpp  context.cpp  context.hpp  frame_scheduler.cpp  (+27 more)
onyx/shaders/: alias.slang  blend.slang  circle-2D.frag  circle-2D.slang  circle-2D.vert  circle-drawlevel-simple.frag  circle-drawlevel-simple.vert  circle-drawmode-fill-3D.vert  circle-fill-2D.slang  circle-fill-3D.frag  circle-fill-3D.slang  circle-fill-3D.vert  circle-flat-2D.slang  circle-flat-3D.slang  circle-outline3D.vert  circle-shaded-2D.slang  circle-shaded-3D.slang  circle-shadow-2D.slang  circle-shadow-3D.slang  circle-stencil-2D.slang  circle-stencil-3D.slang  circle-stencil-3D.vert  circle.slang  circle2D.frag  circle2D.vert  circle3D.frag  circle3D.vert  common.slang  compositor.slang  distance.slang  dynamic-flat-2D.slang  dynamic-flat-3D.slang  dynamic-shaded-2D.slang  dynamic-shaded-3D.slang  dynamic-shadow-2D.slang  dynamic-shadow-3D.slang  dynamic.slang  full-pass-uvs.vert  full-pass.vert  full-vertex.slang  (+65 more)
onyx/shared/: definitions.hpp
onyx/source/: attachment.hpp  buffer.hpp  color.cpp  context.cpp  conversion.cpp  conversion.hpp  core.cpp  core.hpp  descriptors.cpp  descriptors.hpp  dialog.cpp  execution.cpp  execution.hpp  font.cpp  gltf.cpp  image.cpp  imgui_backend.cpp  imgui_backend.hpp  instance.hpp  layout.cpp  mesh.cpp  onyx.cpp  onyx.hpp  overlay.cpp  pass.hpp  pch.cpp  pch.hpp  pipelines.cpp  pipelines.hpp  platform.cpp  platform.hpp  render_target.cpp  render_texture.cpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  shaders.cpp  shaders.hpp  spirv.hpp  (+5 more)
performance/: CMakeLists.txt  profile.py  requirements.txt
performance/perf/: argparse.cpp  argparse.hpp  lattice.cpp  lattice.hpp  layer.cpp  layer.hpp  main.cpp
single-window-demo/: CMakeLists.txt
single-window-demo/src/: app.cpp  layer.cpp  shapes.cpp
single-window-demo/swdemo/: app.cpp  app.hpp  layer.cpp  layer.hpp  main.cpp  shapes.cpp
(+167 files in other folders)
